fix: Response body text cut off issue fixed

--- a/src/components/ResponseBody/ResponseBody.module.css
+++ b/src/components/ResponseBody/ResponseBody.module.css
@@ -2,5 +2,4 @@
     display: flex;
     justify-content: right;
     gap: 10px;
-    margin-bottom: 2rem;
 }
